Add folder move request processing